--- a/displaytabs/tabs/AccountingUI/ExpenseProfileMain.html
+++ b/displaytabs/tabs/AccountingUI/ExpenseProfileMain.html
@@ -1,54 +1,54 @@
 <div style="display: flex; flex: 100%;">
-    <input rowIndex="0" type="hidden" class="form-control editExpense" module="ExpenseUI" name="ExpenseId">
-    <input rowIndex="0" type="hidden" class="form-control editExpense" module="ExpenseUI" name="code">
+    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="ExpenseUI" name="ExpenseId">
+    <input rowIndex="0" type="hidden" class="form-control editRecord" module="ExpenseUI" name="code">
     <div class="form-group" style="flex: 3; margin-left: 10px;">
         <label class="control-label">Payee</label>
         <div class="input-group" style="width: 100%;">
-            <input rowIndex="0" type="text" class="form-control autocomplete" name="payeeCode" placeholder="Payee" module="ExpenseUI" mainmodule="ExpenseUI" autoname="payeeCode" helptitle="payeeCode">
-            <input rowIndex="0" class="form-control editExpense HiddenAutoComplete" name="payeeCode" type="hidden" module="ExpenseUI" mainmodule="ExpenseUI" autoNameField="payeeCode" value="">
-            <div class="autocomplete-items" rowIndex="0" module="ExpenseUI" mainmodule="ExpenseUI" autoname="payeeCode">
+            <input rowIndex="0" type="text" class="form-control autocomplete" name="payeeCode" placeholder="Payee" module="ExpenseUI" autoname="payeeCode" helptitle="payeeCode">
+            <input rowIndex="0" class="form-control editRecord HiddenAutoComplete" name="payeeCode" type="hidden" module="ExpenseUI" autoNameField="payeeCode" value="">
+            <div class="autocomplete-items" rowIndex="0" module="ExpenseUI" autoname="payeeCode">
             </div>
-        </div>
+        </div> 
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Type</label>
-        <input type="text" rowIndex="0" class="form-control editExpense" module="ExpenseUI"
-            name="payeeType" tabName="_TABNAME_" disabled>
+        <input type="text" rowIndex="0" class="form-control editRecord" module="ExpenseUI"
+            name="payeeType" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Account</label>
         <div class="input-group" style="width: 100%;">
-            <input rowIndex="0" type="text" class="form-control autocomplete" name="paymentAccountCode" placeholder="Account" module="ExpenseUI" mainmodule="ExpenseUI" autoname="paymentAccountCode" helptitle="paymentAccountCode">
-            <input rowIndex="0" class="form-control editExpense HiddenAutoComplete" name="paymentAccountCode" type="hidden" module="ExpenseUI" mainmodule="ExpenseUI" autoNameField="paymentAccountCode" value="">
-            <div class="autocomplete-items" rowIndex="0" module="ExpenseUI" mainmodule="ExpenseUI" autoname="paymentAccountCode">
+            <input rowIndex="0" type="text" class="form-control autocomplete" name="paymentAccountCode" placeholder="Account" module="ExpenseUI" autoname="paymentAccountCode" helptitle="paymentAccountCode">
+            <input rowIndex="0" class="form-control editRecord HiddenAutoComplete" name="paymentAccountCode" type="hidden" module="ExpenseUI" autoNameField="paymentAccountCode" value="">
+            <div class="autocomplete-items" rowIndex="0" module="ExpenseUI" autoname="paymentAccountCode">
             </div>
-        </div>
+        </div> 
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Payment Date</label>
-        <input type="text" rowIndex="0" class="form-control calendar editExpense" module="ExpenseUI"
+        <input type="text" rowIndex="0" class="form-control calendar editRecord" module="ExpenseUI"
             name="paymentDate" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Payment Method</label>
-        <input type="text" rowIndex="0" class="form-control editExpense" module="ExpenseUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="ExpenseUI"
             name="paymentMethod" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Total Amount</label>
-        <input type="text" rowIndex="0" class="form-control editExpense" module="ExpenseUI"
-            name="totalAmount" tabName="_TABNAME_" disabled="">
+        <input type="text" rowIndex="0" class="form-control editRecord" module="ExpenseUI"
+            name="totalAmount" tabName="_TABNAME_">
     </div>
 </div>
 <div style="display: flex; flex: 100%;">
     <div class="form-group" style="flex: 10; margin-left: 11px;">
         <label>Reference Number</label>
-        <input type="text" rowIndex="0" class="form-control editExpense" module="ExpenseUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="ExpenseUI"
             name="referenceNumber" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Memo</label>
-        <input type="text" rowIndex="0" class="form-control editExpense" module="ExpenseUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="ExpenseUI"
             name="memo" tabName="_TABNAME_">
     </div>
 </div>
