--- a/displaytabs/tabs/AccountingUI/SalesOrderItems.html
+++ b/displaytabs/tabs/AccountingUI/SalesOrderItems.html
@@ -30,7 +30,7 @@
                     <div style="flex: 1; text-align: right;">
                         <i style="margin-right: 5px;">----</i>
                     </div>
-                    <div style="flex: 4; margin-left: 10px;">
+                    <div style="flex: 4;">
                         <div class="input-group" style="width: 100%;">
                             <input rowIndex="----" type="text" class="form-control autocomplete editRecordAutoComplete" name="productCode"
                                 placeholder="" module="SalesOrderItemUI" parentModule="SalesOrderUI"
@@ -46,20 +46,20 @@
                                 module="SalesOrderItemUI" autoNameField="productCode" value=""/>
                         </div>
                     </div>
-                    <div style="flex: 2; margin-left: 10px;">
+                    <div style="flex: 2;">
                         <input rowIndex="----" name="quantity" module="SalesOrderItemUI" parentModule="SalesOrderUI" type="text"
                             class="form-control editRecord autoSaveSubRecord" placeholder="">
                     </div>
-                    <div style="flex: 2; margin-left: 10px;">
+                    <div style="flex: 2;">
                         <input rowIndex="----" name="unitPrice" module="SalesOrderItemUI" parentModule="SalesOrderUI" type="text"
                             class="form-control editRecord autoSaveSubRecord" placeholder="">
                     </div>
-                    <div style="flex: 3; margin-left: 10px;">
+                    <div style="flex: 3;">
                         <input rowIndex="----" name="totalAmount" module="SalesOrderItemUI" parentModule="SalesOrderUI" type="text"
                             class="form-control editRecord autoSaveSubRecord" placeholder="">
                     </div>
                     <div style="flex: 1; text-align: left; margin-top: 7px;">
-                        <input rowIndex="----" name="bankingCode" module="SalesOrderItemUI" parentModule="SalesOrderUI" type="hidden"
+                        <input rowIndex="----" name="salesOrderCode" module="SalesOrderItemUI" parentModule="SalesOrderUI" type="hidden"
                             class="form-control editRecord subRecordSearchFilter" placeholder=""/>
                         <input rowIndex="----" name="code" module="SalesOrderItemUI" parentModule="SalesOrderUI" type="hidden"
                             class="form-control editRecord" placeholder=""/>
@@ -74,19 +74,21 @@
             </div>
             <div class="titleRecordTemplate">
                 <div style="display: flex; width: 100%;">
-                    <div class="text-center" style="flex: 4; margin-left: 10px;">
+                    <div class="text-center" style="flex: 1;">
+                    </div>
+                    <div class="text-center" style="flex: 4;">
                         <b>Product/Service</b>
                     </div>
-                    <div class="text-center" style="flex: 2; margin-left: 10px;">
+                    <div class="text-center" style="flex: 2;">
                         <b>Quantity</b>
                     </div>
-                    <div class="text-center" style="flex: 2; margin-left: 10px;">
+                    <div class="text-center" style="flex: 2;">
                         <b>Unit Price</b>
                     </div>
-                    <div class="text-center" style="flex: 3; margin-left: 10px;">
+                    <div class="text-center" style="flex: 3;">
                         <b>Amount</b>
                     </div>
-                    <div class="text-center" style="flex: 1; margin-left: 10px;">
+                    <div class="text-center" style="flex: 1;">
                     </div>
                 </div>
             </div>
