--- a/displaytabs/tabs/AccountingUI/ExpenseSearch.html
+++ b/displaytabs/tabs/AccountingUI/ExpenseSearch.html
@@ -3,15 +3,21 @@
 <div class="box box-default">
     <div class="box-header ui-sortable-handle">
         <i class="fa fa-users"></i>
-
         <h3 class="box-title">Search</h3>
+        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+            <div style="display: flex;">
+                <div style="display: flex; margin-top: 5px; margin-left: 10px;" class="hand btnRecordDownloadCSV" module="ExpenseUI">
+                    <i class="fa fa-fw fa-download" style="margin-top: 5px;"></i> <i>CSV</i>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="box-body">
+    <div class="box-body"> 
         <div class="form-group">
-            <input type="text" class="form-control searchFilter" module="ExpenseUI" tabName="_TABNAME_" placeholder="Search Expense">
+            <input type="text" class="form-control searchFilter" module="ExpenseUI" tabName="_TABNAME_" name="mainFilter" placeholder="Search Expense" rowIndex="0">
         </div>
     </div>
 
-    <div class="box-body searchRecords" module="ExpenseUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchRecords" module="ExpenseUI" tabName="_TABNAME_">
     </div>
 </div>
