--- a/displaytabs/tabs/AccountingUI/ManualEntryProfileMain.html
+++ b/displaytabs/tabs/AccountingUI/ManualEntryProfileMain.html
@@ -1,42 +1,19 @@
 <div style="display: flex; flex: 100%;">
-    <input rowIndex="0" type="hidden" class="form-control editSalesOrder" module="SalesOrderUI" name="SalesOrderId">
-    <input rowIndex="0" type="hidden" class="form-control editSalesOrder" module="SalesOrderUI" name="code">
-    <div class="form-group" style="flex: 3; margin-left: 10px;">
-        <label class="control-label">Employee</label>
-        <div class="input-group" style="width: 100%;">
-            <input rowIndex="0" type="text" class="form-control autocomplete" name="employeeCode" placeholder="Payee" module="SalesOrderUI" mainmodule="SalesOrderUI" autoname="employeeCode" helptitle="employeeCode" disabled="">
-            <input rowIndex="0" class="form-control editSalesOrder HiddenAutoComplete" name="employeeCode" type="hidden" module="SalesOrderUI" mainmodule="SalesOrderUI" autoNameField="employeeCode" value="">
-            <div class="autocomplete-items" rowIndex="0" module="SalesOrderUI" mainmodule="SalesOrderUI" autoname="employeeCode">
-            </div>
-        </div> 
-    </div>
-    <div class="form-group" style="flex: 3; margin-left: 10px;">
-        <label class="control-label">Customer</label>
-        <div class="input-group" style="width: 100%;">
-            <input rowIndex="0" type="text" class="form-control autocomplete" name="customerCode" placeholder="Payee" module="SalesOrderUI" mainmodule="SalesOrderUI" autoname="customerCode" helptitle="customerCode">
-            <input rowIndex="0" class="form-control editSalesOrder HiddenAutoComplete" name="customerCode" type="hidden" module="SalesOrderUI" mainmodule="SalesOrderUI" autoNameField="customerCode" value="">
-            <div class="autocomplete-items" rowIndex="0" module="SalesOrderUI" mainmodule="SalesOrderUI" autoname="customerCode">
-            </div>
-        </div> 
+    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="ManualEntryUI" name="ManualEntryId">
+    <input rowIndex="0" type="hidden" class="form-control editRecord" module="ManualEntryUI" name="code">
+    <div class="form-group" style="flex: 1; margin-left: 15px;">
+        <label>Reference Number</label>
+        <input type="text" rowIndex="0" class="form-control editRecord" module="ManualEntryUI"
+            name="referenceNumber" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
-        <label>Type</label>
-        <input type="text" rowIndex="0" class="form-control editSalesOrder" module="SalesOrderUI"
-            name="documentType" tabName="_TABNAME_">
-    </div>
-    <div class="form-group" style="flex: 2; margin-left: 15px;">
-        <label>Contact</label>
-        <input type="text" rowIndex="0" class="form-control editSalesOrder" module="SalesOrderUI"
-            name="contactPerson" tabName="_TABNAME_">
+        <label>Transaction&nbsp;Date</label>
+        <input type="text" rowIndex="0" class="form-control calendar editRecord" module="ManualEntryUI"
+            name="transactionDate" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
-        <label>Payment Date</label>
-        <input type="text" rowIndex="0" class="form-control calendar editSalesOrder" module="SalesOrderUI"
-            name="paymentDate" tabName="_TABNAME_">
-    </div>
-    <div class="form-group" style="flex: 1; margin-left: 15px;">
-        <label>Overall Amount</label>
-        <input type="text" rowIndex="0" class="form-control editSalesOrder" module="SalesOrderUI"
-            name="overallAmount" tabName="_TABNAME_" disabled="">
+        <label>Total Amount</label>
+        <input type="text" rowIndex="0" class="form-control editRecord" module="ManualEntryUI"
+            name="totalAmount" tabName="_TABNAME_">
     </div>
 </div>
