--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -253,7 +253,7 @@
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
                                             <button type="button" class="btn btn-success btnSaveRecord" module="ManualEntryUI">Save Manual Entry</button>
                                             <button type="button" class="btn btn-info btnNewRecord" module="ManualEntryUI">
-                                                <i class="fa fa-plus"></i> New Expense</button>
+                                                <i class="fa fa-plus"></i> New Manual Entry</button>
                                             <button type="button" class="btn btn-info btnReport" MainMenu="AccountingUI" module="ManualEntryUI" style="margin-left: 10px;">
                                                 <i class="fa fa-file-text-o"></i> Report</button>
                                         </div>
@@ -282,17 +282,17 @@
                         </div>
                     </div>
                     <div class="tab-pane" id="Taxes">
-                        <pre style="display: none;">
-                            --Tax Creation
-                            <a href="https://www.youtube.com/watch?v=yOa8dYEjcJQ&feature=youtu.be" target="_blank">Video</a>                            
-                        </pre>
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
                                 <div class="box box-warning">
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Tax Period</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-                                            <button type="button" class="btn btn-info BankingUI_btnNewTaxPeriod">New Tax Period</button>
+                                            <button type="button" class="btn btn-success btnSaveRecord" module="TaxPeriodUI">Save Tax Period</button>
+                                            <button type="button" class="btn btn-info btnNewRecord" module="TaxPeriodUI">
+                                                <i class="fa fa-plus"></i> New Tax Period</button>
+                                            <button type="button" class="btn btn-info btnReport" MainMenu="AccountingUI" module="TaxPeriodUI" style="margin-left: 10px;">
+                                                <i class="fa fa-file-text-o"></i> Report</button>
                                         </div>
                                     </div>
                                     <!-- /.box-header -->
@@ -301,24 +301,12 @@
                                         <div class="nav-tabs-custom" style="margin-top: 5px;">
                                             <ul class="nav nav-tabs">
                                                 <li class="tab-pane active">
-                                                    <a href="#TaxPeriodReturn" data-toggle="tab" aria-expanded="false">Tax Returns</a>
-                                                </li>
-                                                <li class="tab-pane">
-                                                    <a href="#TaxPeriodPayment" data-toggle="tab" aria-expanded="true">Tax Payments</a>
-                                                </li>
-                                                <li class="tab-pane">
-                                                    <a href="#TaxPeriodReport" data-toggle="tab" aria-expanded="true">Report</a>
+                                                    <a href="#TaxPeriodTransactions" data-toggle="tab" aria-expanded="false">Tax Transactions</a>
                                                 </li>
                                             </ul>
                                             <div class="tab-content no-padding">
-                                                <div class="tab-pane active" id="TaxPeriodReturn">
-                                                    <div class="DisplayTab" tabName="TaxPeriod" tabUrl="TaxPeriodReturn"></div>
-                                                </div>
-                                                <div class="tab-pane" id="TaxPeriodPayment">
-                                                    <div class="DisplayTab" tabName="TaxPeriod" tabUrl="TaxPeriodPayment"></div>
-                                                </div>
-                                                <div class="tab-pane" id="TaxPeriodReport">
-                                                    <div class="DisplayTab" tabName="TaxPeriod" tabUrl="TaxPeriodReport"></div>
+                                                <div class="tab-pane active" id="TaxPeriodTransactions">
+                                                    <div class="DisplayTab" tabName="TaxPeriod" tabUrl="TaxPeriodTransaction"></div>
                                                 </div>
                                             </div>
                                         </div>
